try again to fix z-index

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,9 +62,9 @@ body {
 }
 
 #slider {
-  z-index: -1;
+  z-index: -10;
   &:first-child {
-    z-index: -1;
+    z-index: -10;
   }
 }
 
@@ -87,6 +87,7 @@ body {
   background-color:rgba(230,230,230,0.75);
   padding: 15px;
   z-index: 10;
+  position: relative;
 }
 
 #desc-sec {
@@ -96,6 +97,7 @@ body {
   background-color:rgba(230,230,230,0.8);
   padding: 15px;
   z-index: 10;
+  position: relative;
 }
 
 #learn-button {
